k8s-manifests/adservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-deployment
  namespace: dev
  labels:
    app: adservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      serviceAccountName: adservice-sa
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: adservice
        image: yakub363/adservice:v1.0
        ports:
        - containerPort: 9555
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        readinessProbe:
          tcpSocket:
            port: 9555
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 9555
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: dev
  labels:
    app: adservice
spec:
  selector:
    app: adservice
  ports:
  - protocol: TCP
    port: 9555
    targetPort: 9555
  type: ClusterIP
