k8s-manifests/cartservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: dev
  labels:
    app: cartservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      serviceAccountName: cartservice
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: cartservice
          image: yakub363/cartservice:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7070
              protocol: TCP
          readinessProbe:
            grpc:
              port: 7070
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 7070
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 200m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: dev
  labels:
    app: cartservice
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
    - name: grpc
      port: 7070
      targetPort: 7070
      protocol: TCP
