k8s-manifests/checkoutservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutapp-deploy
  namespace: dev
  labels:
    app: checkoutapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutapp
  template:
    metadata:
      labels:
        app: checkoutapp
    spec:
      serviceAccountName: checkoutapp-sa
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: checkoutservice
        image: yakub363/checkoutservice:v1.0
        ports:
        - containerPort: 5050
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        readinessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: dev
  labels:
    app: checkoutservice
spec:
  selector:
    app: checkoutapp
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 5050
  type: ClusterIP
