k8s-manifests/currencyservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyapp-deploy
  namespace: dev
  labels:
    app: currencyapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currencyapp
  template:
    metadata:
      labels:
        app: currencyapp
    spec:
      serviceAccountName: currencyapp-sa
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: currencyservice
          image: yakub363/currencyservice:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7000
              protocol: TCP
          readinessProbe:
            grpc:
              port: 7000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 7000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - ALL

---

apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: dev
  labels:
    app: currencyservice
spec:
  type: ClusterIP
  selector:
    app: currencyapp
  ports:
    - port: 7000
      targetPort: 7000
      protocol: TCP
