k8s-manifests/paymentservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deploy
  namespace: dev
  labels:
    app: paymentapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentapp
  template:
    metadata:
      labels:
        app: paymentapp
    spec:
      serviceAccountName: paymentapp-sa
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
        - name: paymentservice
          image: yakub363/paymentservice:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
              protocol: TCP
          readinessProbe:
            grpc:
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 50051
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - ALL

---

apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: dev
  labels:
    app: paymentservice
spec:
  type: ClusterIP
  selector:
    app: paymentapp
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
