k8s-manifests/recomendationservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-deploy
  namespace: dev
  labels:
    app: recommendationapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendationapp
  template:
    metadata:
      labels:
        app: recommendationapp
    spec:
      serviceAccountName: recommendationapp-sa
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: recommendationservice
          image: yakub363/recommendationservice:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            grpc:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 220Mi
            limits:
              cpu: 200m
              memory: 450Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: dev
  labels:
    app: recommendationservice
spec:
  type: ClusterIP
  selector:
    app: recommendationapp
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
