k8s-manifests/shoppingassistantservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingassistantservice
  namespace: dev
  labels:
    app: shoppingassistantservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingassistantservice
  template:
    metadata:
      labels:
        app: shoppingassistantservice
    spec:
      serviceAccountName: shoppingassistantservice
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        image: yakub363/shoppingassistantservice:v1.0
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        readinessProbe:
          httpGet:
            path: /_healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /_healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingassistantservice
  namespace: dev
  labels:
    app: shoppingassistantservice
spec:
  selector:
    app: shoppingassistantservice
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
